// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveDocumentComponent component Should render without crashing when has changes 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <WithStyles(ForwardRef(IconButton))
    disabled={false}
    id="Save"
    onClick={[Function]}
    title="Save"
  >
    <SaveIcon />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;

exports[`SaveDocumentComponent component Should render without crashing when there are no changes 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <WithStyles(ForwardRef(IconButton))
    disabled={true}
    id="Save"
    onClick={[Function]}
    title="Save"
  >
    <SaveIcon />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;
